--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.13.1",
-    "next": "15.0.3",
-    "next-intl": "^3.25.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "swiper": "^11.1.15"
+    "framer-motion": "^10.16.4",
+    "next": "14.0.4",
+    "next-intl": "^3.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.13",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.3.0"
   }
 }
