--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "framer-motion": "^10.16.4",
     "next": "14.0.4",
     "next-intl": "^3.4.1",
