--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "swiper": "^11.0.5"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
