--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-intl": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.15.0",
     "smooth-scroll": "^16.1.3",
     "swiper": "^11.0.5"
   },
