--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "next-intl": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.12.2",
     "recharts": "^2.15.0",
     "smooth-scroll": "^16.1.3",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
