--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "country-data": "^0.0.31",
     "framer-motion": "^10.16.4",
     "next": "14.0.4",
     "next-intl": "^3.4.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.15.1",
     "react-particles": "^2.12.2",
+    "react-phone-number-input": "^3.4.12",
     "recharts": "^2.15.0",
     "smooth-scroll": "^16.1.3",
     "swiper": "^11.0.5",
