--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "axios": "^1.8.2",
     "country-data": "^0.0.31",
+    "form-data": "^4.0.2",
     "framer-motion": "^10.16.4",
     "next": "14.0.4",
     "next-intl": "^3.4.1",
