--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.0",
+    "@types/node": "20.17.50",
+    "@types/react": "18.3.22",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.0"
+    "typescript": "5.8.3"
   }
 }
