--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "country-data": "^0.0.31",
     "form-data": "^4.0.2",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.542.0",
     "mongoose": "^8.15.0",
     "next": "14.0.4",
     "next-intl": "^3.4.1",
