--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.26.3",
+    "@next/bundle-analyzer": "^15.5.5",
     "@types/node": "20.17.50",
     "@types/react": "18.3.22",
     "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "5.8.3"
   }
 }
