--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.2",
     "country-data": "^0.0.31",
     "form-data": "^4.0.2",
