--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "country-data": "^0.0.31",
     "form-data": "^4.0.2",
     "framer-motion": "^10.16.4",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.15.0",
     "next": "14.0.4",
@@ -22,9 +23,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.15.1",
+    "react-markdown": "^10.1.0",
     "react-particles": "^2.12.2",
     "react-phone-number-input": "^3.4.12",
     "recharts": "^2.15.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "smooth-scroll": "^16.1.3",
     "swiper": "^11.0.5",
     "tsparticles-engine": "^2.12.0",
