--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "recharts": "^2.15.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
+    "rehype-unwrap-images": "^1.0.0",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "smooth-scroll": "^16.1.3",
     "swiper": "^11.0.5",
