--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "country-data": "^0.0.31",
     "form-data": "^4.0.2",
     "framer-motion": "^10.16.4",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.15.0",
     "next": "14.0.4",
@@ -22,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.15.1",
+    "react-markdown": "^10.1.0",
     "react-particles": "^2.12.2",
     "react-phone-number-input": "^3.4.12",
     "recharts": "^2.15.0",
